Remove sensitive data from .env.template
Clear sensitive information from the .env.template file.

--- a/.env.template
+++ b/.env.template
@@ -1,13 +1,13 @@
 
 PORT=3000
-URL_FRONTEND=http://localhost:3001
-EMAIL=cberna.alvaro@gmail.com
-DATABASE_NAME=nutriapp-db
-DATABASE_URL=postgresql://postgres:dante123@localhost:5433/nutriapp-db?schema=public
+URL_FRONTEND=
+EMAIL=
+DATABASE_NAME=
+DATABASE_URL=
 
-JWT_ACCESS_SECRET="una_clave_muuy_segura_access"
-JWT_REFRESH_SECRET="otra_clave_muuy_segura_refresh"
-JWT_ACCESS_EXPIRATION="9000s"   # 150 minutes
-JWT_REFRESH_EXPIRATION="7d"    # 7 days
-BCRYPT_SALT_OR_ROUNDS=100
-NODE_ENV=development
+JWT_ACCESS_SECRET=
+JWT_REFRESH_SECRET=
+JWT_ACCESS_EXPIRATION=
+JWT_REFRESH_EXPIRATION=
+BCRYPT_SALT_OR_ROUNDS=
+NODE_ENV=
