--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ lerna-debug.log*
 .env.test.local
 .env.production.local
 .env.local
+problems.txt
 
 # temp directory
 .temp
@@ -61,3 +62,6 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
 # Otros
 /problems.txt
+problems.txt
+/doc.md
+doc.md
